--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <!-- <script src="reduce.js"></script> -->
     <!-- <script src="let.js"></script> -->
     <!-- <script src="Callback.js"></script> -->
-    <script src="Promises .js"></script>
+    <!-- <script src="Promises.js"></script> -->
+    <!-- <script src="Prom.js"></script> -->
+    <!-- <script src="PromiseAPIs.js"></script> -->
+    <!-- <script src="asyncawait.js"></script> -->
+    <!-- <script src="Promises2.js"></script> -->
+    <!-- <script src="shoppingcart.js"></script> -->
+    <!-- <script src="async.js"></script> -->
+    <script src="this.js"></script>
     <h1>Hoisting in JavaScript 🔥(variables & functions)</h1>
 
     <!-- <button id="orange">orange</button>
